--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,19 @@
 			<artifactId>standard</artifactId>
 			<version>1.1.2</version>
 		</dependency>
+		
+	<!-- soap start -->
+		<dependency>
+    <groupId>javax.xml.soap</groupId>
+    <artifactId>javax.xml.soap-api</artifactId>
+    <version>1.3.5</version>
+</dependency>
+
+<dependency>
+    <groupId>javax.xml.ws</groupId>
+    <artifactId>jaxws-api</artifactId>
+    <version>2.2.11</version>
+</dependency>
 
 	</dependencies>
   <build>
